<resources>
    <string name="app_name">Peter and Friends</string>
    <string name="peter_amp_friends"><![CDATA[Peter & Friends]]></string>
    <string name="home">HOME</string>
    <string name="settings">ACCOUNT</string>
    <string name="messages">MESSAGES</string>
    <string name="greeting">Sign up to see gigs in your area.</string>
    <string name="register">Register</string>
    <string name="verify_password">Verify Password</string>
    <string name="password">Password</string>
    <string name="birthday">Birthday</string>
    <string name="email_address">Email Address</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="profile_img_description">Profile image</string>
    <string name="user_name">Eddy Varela</string>
    <string name="address">Miami, Florida</string>
    <string name="rating_sample">4.2/5</string>
    <string name="start_time">Start Time</string>
    <string name="job_title">Job Title</string>
    <string name="date_posted">Date Posted</string>
    <string name="salary">Salary</string>
    <string name="requirements">Requirements</string>
    <string name="tags">Tags</string>
    <string name="contact">Contact</string>
    <string name="apply">Apply</string>
    <string name="create_update">Create</string>
    <string name="post_job">POST JOB</string>
    <string name="job_details">Job Details</string>
    <string name="logistic_information">Logistic Information</string>
    <string name="new_job_posting_details">New Job Posting Details</string>
    <string name="username">Username</string>
    <string name="edit">EDIT</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="create_post">CREATE POST</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="image">Image</string>
    <string name="delete">Delete</string>
    <string name="create_job_post">CREATE JOB POSTING</string>
    <string name="payment_hint">How much do you want to pay?</string>
    <string name="author">author</string>
    <string name="descriptive_text">Descriptive Text</string>
    <string name="local_remote">Local/Remote</string>
    <string name="datetime">DateTime</string>
    <string name="pay_amt">Pay Amt</string>
    <string name="detail">Details</string>
    <string name="short_app_name"><![CDATA[P&F]]></string>
    <string name="log_in">Log in</string>
    <string name="create_job">Create Job</string>
    <string name="jobdescription">JobDescription</string>
    <string name="legal_info">By signing up, you agree to our Terms, Data Policy, and Cookies Policy. Lucky for you, we
        have none.
    </string>
    <string name="gig_summary">Gigs Completed: Spring Mobile Software Professor Instagram Lead Developer Facebook Lead
        Developer
    </string>
    <string name="sample_bio">Hello! I am passionate about mobile software development! Shoot me a message if you need
        help implementing a recycler view!
    </string>
    <string name="sample_name">Peter Ékler</string>
    <string name="sample_location">Budapest, Hungary</string>
    <string name="attach_image">Attach image</string>
    <string name="update_your_personal_information">Update Your Personal Information.</string>
</resources>
