<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:paddingVertical="40dp"
            android:paddingHorizontal="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/jobTitleTV"
                android:layout_width="match_parent"
                android:text="@string/job_title"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:textSize="30sp"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/locationTV"
                    android:layout_width="0dp"
                    android:text="@string/location"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/dateTV"
                    android:layout_width="0dp"
                    android:text="@string/date_posted"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/salaryTV"
                    android:layout_width="0dp"
                    android:text="@string/salary"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"/>


            <TextView
                    android:id="@+id/startTimeTV"
                    android:layout_width="0dp"
                    android:text="@string/start_time"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="match_parent"
                android:text="@string/description"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/requirementsTV"
                android:layout_width="match_parent"
                android:text="@string/requirements"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tagsTV"
                android:layout_width="match_parent"
                android:text="@string/tags"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/contactTV"
                android:layout_width="match_parent"
                android:text="@string/contact"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/applyBTN"
                android:layout_width="match_parent"
                android:text="@string/apply"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>