<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <!--<ImageView-->
            <!--android:contentDescription=""-->
            <!--android:id="@+id/btn_capture_photo"-->
            <!--android:layout_width="399dp"-->
            <!--android:layout_height="594dp"-->
            <!--android:src="@drawable/rectangle"-->
            <!--app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->

    <ImageView
            android:contentDescription=""
            android:id="@+id/btn_capture_photo"
            android:layout_width="350dp"
            android:layout_height="392dp"
            android:src="@drawable/white_rectangle"

            android:layout_marginTop="52dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintTop_toBottomOf="@+id/textView2"/>


    <ImageView android:layout_width="30dp" android:layout_height="30dp"
               android:src="@drawable/account"
               app:layout_constraintEnd_toStartOf="@+id/etFirstNameRegister"
               app:layout_constraintTop_toTopOf="@+id/etFirstNameRegister" android:id="@+id/imageView3"
               android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <ImageView android:layout_width="30dp" android:layout_height="30dp"
               android:src="@drawable/mail"
               app:layout_constraintEnd_toStartOf="@+id/etEmailRegister"
               android:id="@+id/imageView4"
               android:layout_marginEnd="8dp"
               android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etEmailRegister"/>
    <ImageView android:layout_width="30dp" android:layout_height="30dp"
               android:src="@drawable/key"
               app:layout_constraintEnd_toStartOf="@+id/etPasswordRegister"
               android:layout_marginEnd="8dp"
               android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etPasswordRegister"/>

    <TextView
            android:text="@string/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:id="@+id/etFirstNameRegister"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/first_name"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp"/>
    <EditText
            android:id="@+id/etLastNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/last_name"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintTop_toBottomOf="@+id/etFirstNameRegister"
            tools:layout_editor_absoluteX="20dp"/>
    <EditText
            android:id="@+id/etEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email_address"
            tools:layout_editor_absoluteX="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"/>
    <!--<EditText-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="date"-->
            <!--android:ems="10"-->
            <!--android:id="@+id/editText3" app:layout_constraintEnd_toEndOf="parent"-->
            <!--android:layout_marginEnd="16dp" android:layout_marginRight="16dp"-->
            <!--android:hint="@string/birthday" android:layout_marginTop="56dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/textView2"-->
            <!--app:layout_constraintBaseline_toBaselineOf="@+id/editText"/>-->
    <EditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"/>
    <EditText
            android:id="@+id/etVerifyRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/verify_password"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister"/>
    <Button
            android:id="@+id/registerBtn"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp" app:layout_constraintHorizontal_bias="0.0"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/etVerifyRegister"/>


</android.support.constraint.ConstraintLayout>