<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/colorAccent"
>

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:fitsSystemWindows="true"
            android:layout_height="@dimen/appbar_layout"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary">

            <com.flaviofaria.kenburnsview.KenBurnsView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@android:drawable/btn_star_big_off"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/postInformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:padding="20dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
                android:id="@+id/tvJobInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_title"
                style="@style/JobDetailScreenHeader" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"/>
        <TextView
                android:id="@+id/tvJobInfoAuthor"
                android:text="@string/author"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tvJobInfoTitle"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvJobInfoTitle"/>

        <TextView
                android:id="@+id/tvJobInfoDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="5"
                style="@style/JobDetailScreenInfo"
                android:text="@string/descriptive_text"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvJobInfoTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datetime"
                style="@style/JobDetailScreenInfo"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvJobInfoDescription"
                android:id="@+id/tvJobInfoDateTime"
                app:layout_constraintEnd_toStartOf="@+id/tvJobInfoLocation"
                app:layout_constraintStart_toStartOf="@+id/tvJobInfoDescription"
                app:layout_constraintHorizontal_bias="0.0"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_remote"
                style="@style/JobDetailScreenInfo"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvJobInfoDescription"
                android:id="@+id/tvJobInfoLocation"
                app:layout_constraintEnd_toEndOf="@+id/tvJobInfoDescription"
                app:layout_constraintStart_toStartOf="@+id/tvJobInfoDescription"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_amt"
                style="@style/JobDetailScreenInfo"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvJobInfoDescription"
                android:id="@+id/tvJobInfoPayAmt"
                app:layout_constraintStart_toEndOf="@+id/tvJobInfoLocation"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tvJobInfoDescription"
                app:layout_constraintHorizontal_bias="1.0"/>


        <Button
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/apply"
                app:layout_anchorGravity="right|center"
                app:layout_anchor="@+id/postInformation"
                style="@style/button_apply_default"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/tvJobInfoLocation"
                app:layout_constraintHorizontal_bias="0.505"/>

        <!--<com.google.android.gms.maps.MapView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/mapView" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"-->
        <!--android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"-->
        <!--android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView5"/>-->

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>